--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<!--  <script src="https://www.gstatic.com/firebasejs/6.4.2/firebase-database.js"></script>-->
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#config-web-app -->
+
+
 </body>
 </html>
